intel/bench_214/extr_.numpynumpylinalglapack_litef2c_c_lapack.c_claswp__with_main/log.txt
bench_214/extr_.numpynumpylinalglapack_litef2c_c_lapack.c_claswp__with_main/extr_.numpynumpylinalglapack_litef2c_c_lapack.c_claswp__with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
1 error generated.
HLS FPGA Parse FAILED.
